# HeCalc

./: CITATION.cff  README.md  hecalc_launcher.py  pyproject.toml  requirements.txt
Test/: HeCalc_Input_Example.xlsx  HeCalc_Input_withCorrelation_Example.xlsx  HeCalc_Output_example.xlsx  HeCalc_Output_withCorrelation_example.xlsx
hecalc/: __init__.py  date_calculation.py  linear_propagation.py  main.py  main_GUI.py  monte_carlo.py  montecarlo.py
hecalc/GUI/: __init__.py  base_GUI.py  main_GUI.py
