[tool.poetry]
name = "hecalc"
version = "0.3.3"
description = "A tool for performing (U-Th)/He data reduction and uncertainty propagation"
authors = ["Peter E. Martin <peter.martin-2@colorado.edu>"]

[tool.poetry.dependencies]
# Mandatory dependencies
python = "^3.8"
numpy = ">=1.18.1"
openpyxl = ">=3.0.3"
pandas = ">=1.0.3"
scipy = ">=1.4.1"
setuptools = ">=41.2.0"

# Optional dependencies for GUI
PyQt5 = {version = "^5.15.6", optional = true}
tabulate = {version = "^0.8.9", optional = true}
xlrd = {version = "^1.2.0", optional = true}

[tool.poetry.extras]
gui = ["PyQt5", "tabulate", "xlrd"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
